--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "opstdio",
-  "private": "true",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.4.1",
-  "scripts": {
-    "prepare": "husky",
-    "release": "pnpm changeset publish",
-    "release:next": "pnpm changeset publish --tag next",
-    "version": "pnpm changeset version"
-  },
-  "engines": {
-    "node": "^22"
-  },
-  "dependencies": {
-    "turbo": "^2.4.4"
-  },
-  "devDependencies": {
-    "@changesets/cli": "^2.28.1",
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "husky": "^9.1.7"
-  }
+	"name": "opstdio",
+	"private": "true",
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"packageManager": "pnpm@10.4.1",
+	"scripts": {
+		"format": "biome format --write .",
+		"lint": "biome lint .",
+		"lint:fix": "biome lint --apply .",
+		"typecheck": "pnpm --recursive typecheck",
+		"prepare": "husky && pnpm format",
+		"release": "pnpm changeset publish",
+		"release:next": "pnpm changeset publish --tag next",
+		"version": "pnpm changeset version"
+	},
+	"engines": {
+		"node": "^22"
+	},
+	"dependencies": {
+		"turbo": "^2.4.4"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@changesets/cli": "^2.28.1",
+		"@commitlint/cli": "^19.8.0",
+		"@commitlint/config-conventional": "^19.8.0",
+		"@tsconfig/node22": "^22.0.1",
+		"@types/node": "^22.13.14",
+		"husky": "^9.1.7",
+		"typescript": "^5.8.2"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": ["@biomejs/biome"]
+	}
 }
