--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"lint:fix": "biome lint --apply .",
 		"typecheck": "pnpm --recursive typecheck",
 		"prepare": "husky && pnpm format",
+		"prepare-changeset": "ts-node scripts/prepare-changeset.ts",
 		"release": "pnpm changeset publish",
 		"release:next": "pnpm changeset publish --tag next",
 		"version": "pnpm changeset version"
@@ -29,9 +30,12 @@
 		"@tsconfig/node22": "^22.0.1",
 		"@types/node": "^22.13.14",
 		"husky": "^9.1.7",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.8.2"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome"]
+		"onlyBuiltDependencies": [
+			"@biomejs/biome"
+		]
 	}
 }
