--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -80,6 +80,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Prepare Release
+        run: pnpm prepare:release
+
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
