--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
-	"changelog": "@changesets/cli/changelog",
-	"commit": false,
+	"changelog": ["@changesets/changelog-github", "createGithubReleases"],
+	"commit": true,
 	"fixed": [],
 	"linked": [],
 	"access": "restricted",
