--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
+          node-version: '22.x'
           cache: 'pnpm'
 
       - name: Install dependencies
@@ -67,6 +68,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
+          node-version: '22.x'
           cache: 'pnpm'
 
       - name: Install Dependencies
