feat(scripts): add placeholder test script to package.json
Add a basic "test" script to prevent failures when running test commands.
This script currently outputs "No tests configured" and exits with code 0.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"prepare:release": "pnpm prepare-changeset && pnpm version",
 		"release": "pnpm changeset publish",
 		"release:next": "pnpm changeset publish --tag next",
+		"test": "echo \"No tests configured\" || exit 0",
 		"version": "pnpm changeset version"
 	},
 	"engines": {
