feat(studio): initialize Next.js app with Tailwind CSS and configuration
- Add new `studio` application using Next.js.
- Include Tailwind CSS setup in `globals.css` and `postcss.config.mjs`.
- Add `.gitignore` for the `studio` app.
- Introduce initial pages, assets, and layout using Next.js defaults.
- Configure TypeScript with `tsconfig.json` for the `studio` app.
- Generate initial `package.json` with necessary dependencies.

BREAKING CHANGE: Introduced `studio` app structure requiring Node and PNPM compatibility.

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,9 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
-	"changelog": ["@changesets/changelog-github", "createGithubReleases"],
+	"changelog": [
+		"@changesets/changelog-github",
+		{ "createGithubReleases": true, "repo": "opstdio/opstd" }
+	],
 	"commit": true,
 	"fixed": [],
 	"linked": [],
