--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -4,7 +4,7 @@
 		"@changesets/changelog-github",
 		{ "createGithubReleases": true, "repo": "opstdio/opstd" }
 	],
-	"commit": true,
+	"commit": false,
 	"fixed": [],
 	"linked": [],
 	"access": "restricted",
