feat(workspaces): enable support for workspaces in package.json
add workspaces configuration to manage monorepo structure
- include apps/* and packages/* in workspaces array

this change facilitates easier dependency management within a monorepo

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
 	"name": "opstdio",
 	"private": "true",
+	"workspaces": [
+		"apps/*",
+		"packages/*"
+	],
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
