refactor(workflows): simplify publish logic in build-and-release.yml
- Optimize conditional logic for publishing in GitHub Actions workflow.
- Adjust .changeset/config.json formatting for readability and maintain consistency.

No functionality changes; streamlines and clarifies code structure.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -78,11 +78,6 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: |
-            if [ "${{ github.ref }}" = "refs/heads/main" ]; then
-              pnpm release
-            elif [ "${{ github.ref }}" = "refs/heads/next" ]; then
-              pnpm release:next
-            fi
+          publish: ${{ github.ref == 'refs/heads/main' && 'pnpm release' || (github.ref == 'refs/heads/next' && 'pnpm release:next') }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
