--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,14 +1,17 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
+	"access": "restricted",
+	"baseBranch": "main",
 	"changelog": [
 		"@changesets/changelog-github",
-		{ "createGithubReleases": true, "repo": "opstdio/opstd" }
+		{
+			"createGithubReleases": true,
+			"repo": "opstdio/opstd"
+		}
 	],
 	"commit": true,
 	"fixed": [],
+	"ignore": [],
 	"linked": [],
-	"access": "restricted",
-	"baseBranch": "main",
-	"updateInternalDependencies": "patch",
-	"ignore": []
+	"updateInternalDependencies": "patch"
 }
