fix(ci): update workflow permissions for release job
add necessary permissions (contents, pull-requests, packages)
to ensure release job executes successfully.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -55,7 +55,10 @@ jobs:
     name: Release
     needs: [lint-and-test]
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/next'
-
+    permissions:
+      contents: write
+      pull-requests: write
+      packages: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
