chore(ci): update changesets action config for versioning
- Add 'version: pnpm version' to changesets action configuration
- Specify commit message for versioning as 'chore(ci): version packages'

This improves clarity and versioning control in the build workflow.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -81,6 +81,8 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
+          version: pnpm version
           publish: ${{ github.ref == 'refs/heads/main' && 'pnpm release' || (github.ref == 'refs/heads/next' && 'pnpm release:next') }}
+          commit: 'chore(ci): version packages'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
