feat(ci): enable git user setup and GitHub release creation
- Add `setupGitUser: true` to configure Git user automatically.
- Add `createGithubReleases: true` for generating GitHub releases.

Improves automation and streamlines release workflow.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -84,5 +84,7 @@ jobs:
           version: pnpm version
           publish: ${{ github.ref == 'refs/heads/main' && 'pnpm release' || (github.ref == 'refs/heads/next' && 'pnpm release:next') }}
           commit: 'chore(ci): version packages'
+          setupGitUser: true
+          createGithubReleases: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
