feat(workflows): automate changeset generation from conventional commits
add conditional steps to build-and-release workflow for changeset generation
update `generate-changeset` script in package.json to align with workflow

improves release management by automating changeset creation for main/next branches

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -77,6 +77,14 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Generate Changesets from Conventional Commits
+        run: |
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            pnpm changeset-conventional -p main
+          elif [ "${{ github.ref }}" == "refs/heads/next" ]; then
+            pnpm changeset-conventional -p main -i next
+          fi
+
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
