feat(ci): add step to create initial tag if not exists
- Add a step to create an initial tag (v0.1.0) if no tags are present.
- Configures Git user for tagging within GitHub Actions workflow.
- Ensures tagging for versioning even on fresh repositories.

Related to improving release processes in CI workflows.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -77,6 +77,15 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Create Initial Tag if Not Exists
+        run: |
+          if [ -z "$(git tag)" ]; then
+            git config user.name "GitHub Actions"
+            git config user.email "actions@github.com"
+            git tag -a v0.1.0 -m "Initial version"
+            git push origin v0.1.0
+          fi
+
       - name: Generate Changesets from Conventional Commits
         run: |
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
