feat(changeset): add privatePackages configuration
- Add `privatePackages` field to `.changeset/config.json`.
- Enables versioning and tagging for private packages.

Useful for projects managing private package releases.

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -13,5 +13,9 @@
 	"fixed": [],
 	"ignore": [],
 	"linked": [],
-	"updateInternalDependencies": "patch"
+	"updateInternalDependencies": "patch",
+	"privatePackages": {
+		"version": true,
+		"tag": true
+	}
 }
