--- a/.docker/postgres/postgres.conf
+++ b/.docker/postgres/postgres.conf
@@ -844,7 +844,7 @@ listen_addresses = '*'
 # Add settings for extensions here
 
 
-shared_preload_libraries = 'pgaudit,table_log,pg_stat_statements,pg_cron'
+shared_preload_libraries = 'pgaudit,table_log,pg_stat_statements,pg_cron,pg_net'
 
 cron.use_background_workers = 'on'
 
