feat(auth): add initial schema and tables for auth service
- Create schema "auth" with tables for users, accounts, sessions, api keys, etc.
- Add foreign key constraints, unique constraints, and indexes for efficient querying.
- Include metadata snapshot for schema.

This change sets up the database infrastructure necessary for authentication and authorization.

--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -12,6 +12,25 @@ services:
       - postgres_data:/home/postgres/pgdata/data
     networks:
       - internal
+  auth:
+    build:
+      context: ./
+      dockerfile: services/auth/Dockerfile
+    restart: unless-stopped
+
+    env_file:
+      - .env
+    environment:
+      DB_HOST : postgres
+      APP_MODE: production
+    ports:
+      - "4000:4000"
+    networks:
+      - internal
+    depends_on:
+      postgres:
+        condition: service_healthy
+
 networks:
   internal:
     driver: bridge
