feat(db): add moddatetime trigger creation for updated_at columns
- Introduce `add_moddatetime_triggers` SQL function to handle trigger creation.
- Ensure triggers update `updated_at` on relevant tables automatically.
- Export `up` function from `db` module to execute database setup logic.
- Integrate `up` function into auth service for migrations setup.
- Minor refactor for cleaner imports in db and auth services.

Rationale:
Streamlines database schema consistency by automatically maintaining `updated_at` values.

BREAKING CHANGE: Requires `moddatetime` extension or fallback implementation in PostgreSQL.

--- a/services/auth/tsconfig.json
+++ b/services/auth/tsconfig.json
@@ -20,9 +20,8 @@
 		"allowSyntheticDefaultImports": true,
 		"forceConsistentCasingInFileNames": true,
 		"paths": {
-			"@opstd/env-validator": [
-				"../../packages/env-validator/src/index.ts"
-			]
+			"@opstd/env-validator": ["../../packages/env-validator/src/index.ts"]
+
 		}
 	},
 	"include": ["src/**/*"],
