feat(studio-ui): add studio-ui package with foundational setup
- Introduced `@opstd/ui` package for a shared UI library
- Added foundational components (e.g., button) and theme support
- Integrated `postcss` and `tailwindcss` with a global styles configuration
- Enabled modular UI structure with exports for components, hooks, and utilities
- Updated `auth` service to use shared PostCSS config from `@opstd/ui`
- Created sign-up UI component leveraging shared button from `@opstd/ui`
- Enhanced `auth` client setup with `better-auth` plugins and session handling

BREAKING CHANGE: Modularized studio UI into a separate package, affecting app imports

--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
 		"typescript": "^5.8.2"
 	},
 	"pnpm": {
-		"onlyBuiltDependencies": ["@biomejs/biome", "esbuild", "sharp"]
+		"onlyBuiltDependencies": ["@biomejs/biome", "core-js-pure", "esbuild", "sharp"]
 	}
 }
