--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -2,8 +2,8 @@
 	"name": "@opstd/auth",
 	"private": "true",
 	"scripts": {
-		"dev": "tsx watch src/index.ts",
-		"build": "tsup src/index.ts",
+		"dev": "tsup src/client.ts schemas/auth.ts --watch",
+		"build": "tsup src/index.ts src/client.ts schemas/auth.ts",
 		"start": "node dist/index.js",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
@@ -34,5 +34,10 @@
 		"tsup": "^8.4.0",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.2"
+	},
+	"exports": {
+		"./schema": "./dist/auth.js",
+		"./client": "./dist/client.js",
+		".": "./dist/index.js"
 	}
 }
