--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -10,6 +10,10 @@
 	},
 	"dependencies": {
 		"@opstd/env-validator": "workspace:*",
+		"@opstd/auth": "workspace:*",
+		"@opstd/ui": "workspace:*",
+		"lucide-react": "^0.475.0",
+		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"next": "15.2.4"
