--- a/packages/studio-ui/tsconfig.json
+++ b/packages/studio-ui/tsconfig.json
@@ -1,25 +1,28 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
+	"display": "React Library",
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"declaration": false,
+		"declaration": true,
+		"declarationMap": true,
+		"esModuleInterop": true,
 		"incremental": false,
 		"isolatedModules": true,
 		"lib": ["es2022", "DOM", "DOM.Iterable"],
+		"module": "NodeNext",
 		"moduleDetection": "force",
+		"moduleResolution": "NodeNext",
 		"noUncheckedIndexedAccess": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
-		"verbatimModuleSyntax": false,
-		"target": "ES2022",
-		"module": "ESNext",
-		"moduleResolution": "Bundler",
-		"esModuleInterop": true,
-		"outDir": "./dist",
 		"strict": true,
-		"allowSyntheticDefaultImports": true,
-		"forceConsistentCasingInFileNames": true
+		"target": "ES2022",
+		"jsx": "react-jsx",
+		"baseUrl": ".",
+		"paths": {
+			"@opstd/ui/*": ["./src/*"]
+		}
 	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules"]
+	"include": ["."],
+	"exclude": ["node_modules", "dist"]
 }
