--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -9,21 +9,24 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@opstd/env-validator": "workspace:*",
 		"@opstd/auth": "workspace:*",
+		"@opstd/db": "workspace:*",
+		"@opstd/env-validator": "workspace:*",
 		"@opstd/ui": "workspace:*",
+		"drizzle-orm": "^0.41.0",
 		"lucide-react": "^0.475.0",
+		"next": "15.2.4",
 		"next-themes": "^0.4.4",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"next": "15.2.4"
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"typescript": "^5",
+		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
-		"@tailwindcss/postcss": "^4",
-		"tailwindcss": "^4"
+		"tailwindcss": "^4",
+		"typescript": "^5"
 	}
 }
