--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"test": "echo \"No tests configured\" || exit 0",
 		"version": "pnpm changeset version",
 		"generate-changeset": "changeset-conventional -p main -i next",
+		"service:dev": "dotenv -e .env -- turbo run service:dev",
+		"start": "dotenv -e .env -- turbo run start",
 		"db:generate": "dotenv -e .env -- turbo run db:generate",
 		"db:migrate": "dotenv -e .env -- turbo run db:migrate",
 		"db:push": "dotenv -e .env -- turbo run db:push"
