feat(workspace): integrate shared TypeScript configurations
- Add `@opstd/tsconfig` package for centralized TS config management.
- Replace individual TS config extensions with shared configurations.
- Add `base.json`, `nextjs.json`, and `react-library.json` to `@opstd/tsconfig`.
- Update all `tsconfig.json` files across packages and services to use shared configs.
- Simplify and standardize TS compiler options and paths.

Why:
- Centralized management simplifies updates, reduces duplication, and ensures consistency.

BREAKING CHANGE: Projects must rely on `@opstd/tsconfig` for TS configurations.

--- a/.docker/postgrest/Dockerfile
+++ b/.docker/postgrest/Dockerfile
@@ -12,8 +12,12 @@ RUN chmod +x /app/update_jwk.sh
 COPY crontab /etc/cron.d/update_jwk
 RUN chmod 0644 /etc/cron.d/update_jwk
 
-# Apply the cron job
-RUN crontab /etc/cron.d/update_jwk
+# Create an entrypoint script
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
-# Get the current JWK
-RUN ./app/update_jwk.sh
+# Remove crontab configurations
+# CMD now replaces crontab approach
+
+# Use the new entrypoint
+ENTRYPOINT ["/entrypoint.sh"]
