--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@opstd/auth",
-	"private": "true",
+	"private": true,
 	"scripts": {
 		"dev": "tsup src/client.ts schemas/auth.ts --watch --outDir dist",
 		"build": "tsup src/index.ts src/client.ts schemas/auth.ts --outDir dist",
@@ -27,6 +27,7 @@
 		"pg": "^8.14.1"
 	},
 	"devDependencies": {
+		"@opstd/tsconfig": "workspace:*",
 		"@types/node": "^22.0.0",
 		"@types/pg": "^8.11.11",
 		"dotenv": "^16.4.7",
