--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -22,6 +22,7 @@
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
+		"@opstd/tsconfig": "workspace:*",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20",
 		"@types/react": "^19",
