--- a/apps/studio/tsconfig.json
+++ b/apps/studio/tsconfig.json
@@ -1,28 +1,23 @@
 {
-	"compilerOptions": {
-		"target": "ES2017",
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"allowJs": true,
-		"skipLibCheck": true,
-		"strict": true,
-		"noEmit": true,
-		"esModuleInterop": true,
-		"module": "esnext",
-		"moduleResolution": "bundler",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"jsx": "preserve",
-		"incremental": true,
-		"plugins": [
-			{
-				"name": "next"
-			}
-		],
-		"paths": {
-			"@/*": ["./src/*"],
-			"@opstd/ui/*": ["../../packages/studio-ui/src/*"]
-		}
-	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-	"exclude": ["node_modules"]
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": [
+    "@opstd/tsconfig/nextjs.json"
+  ],
+  "compilerOptions": {
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ],
+      "@opstd/ui/*": [
+        "../../packages/studio-ui/src/*"
+      ]
+    }
+  },
+  "include": [
+    "../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/next-env.d.ts",
+    "../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/**/*.ts",
+    "../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/**/*.tsx",
+    "../../packages/tsconfig/../../node_modules/.pnpm/@tsconfig+next@2.0.3/node_modules/@tsconfig/next/.next/types/**/*.ts",
+    ".next/types/**/*.ts"
+  ]
 }
