--- a/packages/env-validator/tsconfig.json
+++ b/packages/env-validator/tsconfig.json
@@ -1,13 +1,13 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
-	"extends": "../../tsconfig.json",
+	"extends": ["@opstd/tsconfig/base.json"],
 	"compilerOptions": {
+		"outDir": "./dist",
 		"module": "ESNext",
-		"moduleResolution": "bundler",
-		"target": "ES2022",
-		"esModuleInterop": true,
-		"strict": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true
-	}
+		"moduleResolution": "node",
+		"allowImportingTsExtensions": true,
+		"allowJs": true,
+		"resolveJsonModule": true
+	},
+	"include": ["src/**/*"]
 }
