--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@opstd/logger",
 	"version": "1.0.0",
-	"private": "true",
+	"private": true,
 	"type": "module",
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
@@ -29,6 +29,7 @@
 		"pino-logfmt": "^0.1.1"
 	},
 	"devDependencies": {
+		"@opstd/tsconfig": "workspace:*",
 		"@types/node": "^22.0.0",
 		"tsup": "^8.4.0",
 		"tsx": "^4.19.3",
