--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -1,25 +1,13 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
-	"extends": "../../tsconfig.json",
+	"extends": ["@opstd/tsconfig/base.json"],
 	"compilerOptions": {
-		"declaration": false,
-		"incremental": false,
-		"isolatedModules": true,
-		"lib": ["es2022", "DOM", "DOM.Iterable"],
-		"moduleDetection": "force",
-		"noUncheckedIndexedAccess": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"verbatimModuleSyntax": false,
-		"target": "ES2022",
-		"module": "ESNext",
-		"moduleResolution": "Bundler",
-		"esModuleInterop": true,
 		"outDir": "./dist",
-		"strict": true,
-		"allowSyntheticDefaultImports": true,
-		"forceConsistentCasingInFileNames": true
+		"module": "ESNext",
+		"moduleResolution": "node",
+		"allowImportingTsExtensions": true,
+		"allowJs": true,
+		"resolveJsonModule": true
 	},
-	"include": ["src/**/*"],
-	"exclude": ["node_modules"]
+	"include": ["src/**/*"]
 }
