--- a/packages/studio-ui/package.json
+++ b/packages/studio-ui/package.json
@@ -3,8 +3,7 @@
 	"version": "1.0.0",
 	"type": "module",
 	"private": true,
-	"scripts": {
-	},
+	"scripts": {},
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.2",
 		"class-variance-authority": "^0.7.1",
@@ -18,6 +17,7 @@
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
+		"@opstd/tsconfig": "workspace:*",
 		"@tailwindcss/postcss": "^4.0.8",
 		"@turbo/gen": "^2.4.2",
 		"@types/node": "^20",
