--- a/services/db/package.json
+++ b/services/db/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@opstd/db",
 	"version": "1.0.0",
-	"private": "true",
+	"private": true,
 	"type": "module",
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
@@ -32,6 +32,7 @@
 		"pg": "^8.14.1"
 	},
 	"devDependencies": {
+		"@opstd/tsconfig": "workspace:*",
 		"@types/node": "^22.13.14",
 		"@types/pg": "^8.11.11",
 		"dotenv": "^16.4.7",
