--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,4 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
-	"extends": ["@tsconfig/node22/tsconfig.json"],
-	"compilerOptions": {
-		"baseUrl": ".",
-		"strict": true,
-		"declaration": true,
-		"declarationMap": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true
-	},
-	"files": [],
-	"references": [
-		{ "path": "./packages/*/tsconfig.json" },
-		{ "path": "./apps/*/tsconfig.json" },
-		{ "path": "./services/*/tsconfig.json" }
-	]
+	"extends": ["@opstd/tsconfig/base.json"]
 }
