feat(auth): enhance tsconfig and improve log consistency
- Updated tsconfig with stricter options: moduleResolution, esModuleInterop, strict mode,
  and allowSyntheticDefaultImports for improved TypeScript handling.
- Replaced template literals in log messages with standard strings for consistency.

These changes improve type safety and ensure more predictable runtime behavior.

--- a/services/auth/tsconfig.json
+++ b/services/auth/tsconfig.json
@@ -2,6 +2,10 @@
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"extends": ["@opstd/tsconfig/base.json"],
 	"compilerOptions": {
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"strict": true,
+		"allowSyntheticDefaultImports": true,
 		"paths": {
 			"@opstd/env-validator": ["../../packages/env-validator/src/index.ts"]
 		}
